Fix viewport unit sizes when printing.

FrameView::viewportSizeForViewportUnits had a special path for inert top
controls that used FrameView::layoutSize directly. The old path used
LayoutView::viewWidth and LayoutView::viewHeight which normally resolve to
FrameView::layoutSize but has a special case for when we're in printing mode.
This patch uses the LayoutView version and only special cases the adjustment
made for the URL bar.

BUG=678414

Review-Url: https://codereview.chromium.org/2643903002
Cr-Commit-Position: refs/heads/master@{#444803}

Former-commit-id: b9d998089be2a4ee8a304730a814386168f84641